--- a/engineering_notebook/ch01_process_diagram.html
+++ b/engineering_notebook/ch01_process_diagram.html
@@ -16,10 +16,10 @@
 
         body {
             font-family: 'Microsoft YaHei', sans-serif;
-            background-color: var(--bg-color);
+            /* background-color: var(--bg-color); */
             display: flex;
             justify-content: center;
-            padding: 40px;
+            padding: 15px;
         }
 
         /* Container: Centers everything vertically */
@@ -37,7 +37,7 @@
             background-color: var(--box-bg);
             border: 2px solid var(--primary-color);
             color: var(--text-color);
-            padding: 15px 30px; /* Total width will be 200 + 60 + 4 = 264px */
+            padding: 10px 30px; /* Total width will be 200 + 60 + 4 = 264px */
             border-radius: 8px;
             font-weight: bold;
             box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
