--- a/engineering_notebook/index.html
+++ b/engineering_notebook/index.html
@@ -24,6 +24,18 @@
     ">
     </div>
 
+    <!-- ================= PREFACE ================= -->
+    <div class="sheet">
+        <h1>前言</h1>
+        <div class="img-placeholder" style="height: 300px; margin-bottom: 20px;">
+            <!-- Placeholder for a team photo or other image -->
+        </div>
+        <p>尊敬的评委老师们：</p>
+        <p>工程笔记是我们学习机器人重要环节，它记录了我们搭建细节、创新探索、参赛经验与复盘反思。见证了团队成长的历程，每一页都展示了大家的努力与协作。是凝聚力的见证，是我们成长的足迹，更是逐梦赛场的初心。</p>
+        <p>万分感谢您们的审阅，希望能得到评审老师的宝贵建议及指导，助力我们在VEX学习、探索的道路上稳步前行。</p>
+        <p>我们的队号是2276A，再次感谢您们的关注和支持！</p>
+    </div>
+
     <!-- ================= TABLE OF CONTENTS ================= -->
     <div class="sheet">
         <h1 style="font-size: 48px; border: none; color: #005f9e; text-align: center; margin-bottom: 30px;">目录</h1>
@@ -67,6 +79,12 @@
                     <li>4.7 方案整合</li>
                 </ul>
             </li>
+        </ul>
+        <div class="page-number">i</div>
+    </div>
+    <div class="sheet">
+        <h1 style="font-size: 48px; border: none; color: #005f9e; text-align: center; margin-bottom: 30px;">目录 (续)</h1>
+        <ul style="font-size: 18px; line-height: 2; list-style-type: none; padding-left: 10px; column-count: 2;">
             <li><strong><a href="ch05.html">第五章：搭建与调试</a></strong>
                 <ul style="padding-left: 20px; font-size: 16px;">
                     <li>5.1 搭建启动会</li>
@@ -99,7 +117,7 @@
             </li>
             <li><strong><a href="glossary.html">英语术语表</a></strong></li>
         </ul>
-        <div class="page-number">i</div>
+        <div class="page-number">ii</div>
     </div>
 
     <script src="assets/scripts/common-elements.js"></script>
