--- a/engineering_notebook/ch01.html
+++ b/engineering_notebook/ch01.html
@@ -8,37 +8,11 @@
     <link rel="stylesheet" href="assets/styles/style.css">
     <style>
         /* 补充样式，确保新插入的会议记录表格美观 */
-        /* .meeting-card {
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            padding: 15px;
-            margin-bottom: 20px;
-            background-color: #f9f9f9;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.05);
-        }
-        .meeting-header {
-            border-bottom: 2px solid #007acb;
-            margin-bottom: 10px;
-            padding-bottom: 5px;
-            display: flex;
-            justify-content: space-between;
-            align-items: baseline;
-        }
-        .meeting-title {
-            font-size: 18px;
-            font-weight: bold;
-            color: #333;
-        }
-        .meeting-id {
-            font-size: 14px;
-            color: #888;
-            font-family: monospace;
-        } */
         .meeting-info-table {
             width: 100%;
             border-collapse: collapse;
             margin-bottom: 10px;
-            font-size: 14px;
+            font-size: 20px; /* Unified font size */
         }
         .meeting-info-table td {
             border: 1px solid #e0e0e0;
@@ -50,25 +24,15 @@
             width: 15%;
             color: #555;
         }
-        /* .meeting-content h4 {
-            font-size: 15px;
-            margin: 10px 0 5px 0;
-            color: #007acb;
-            border-left: 3px solid #007acb;
-            padding-left: 8px;
+        .meeting-content h4 {
+            font-size: 22px;
+            font-weight: bold;
         }
-        .meeting-content ul {
-            margin: 5px 0;
-            padding-left: 20px;
+        .meeting-content p, .meeting-content li {
+            font-size: 20px;
         }
-        .meeting-content li {
-            margin-bottom: 4px;
-            font-size: 14px;
-            color: #444;
-            line-height: 1.5;
-        } */
-        /* 保持原有的 sheet 样式兼容 */
-    </style></head>
+    </style>
+</head>
 
 <body class="theme-ch01">
 
@@ -420,13 +384,8 @@
     <!-- ================= REPLACED CONTENT START: 1.6 会议记录 ================= -->
     <!-- ================= PAGE: LOG Cover / Intro ================= -->
     <div class="sheet">
-        <h1>1.6 会议记录 (LOG)</h1>
+        <h1>1.6 会议记录</h1>
         <p style="font-size: 20px; color: #666;">记录我们成长的每一步脚印</p>
-        <!-- <div style="text-align: center; margin-top: 50px;">
-            <div
-                style="width: 100px; height: 100px; border-radius: 50%; background: #007acb; margin: 30px auto; line-height: 100px; font-size: 30px; color: white; font-weight: bold;">
-                LOG</div>
-        </div> -->
 
         <h2>头脑风暴与思维导图</h2>
         <div class="diary-card">
@@ -447,17 +406,14 @@
                 </ul>
             </p>
         </div>
-        <div class="page-number">13</div>
+        <div class="page-number">12</div>
     </div>
 
-    <!-- ================= PAGE: Meeting 1 & 2 ================= -->
+    <!-- ================= PAGE: Meeting 1 ================= -->
     <div class="sheet">
-        <h1>会议记录 (1/5)</h1>
-
-        <!-- Meeting 1 -->
+        <h1>会议记录 (1)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
-                <span class="meeting-title">1) 团队成立大会</span>
                 <span class="meeting-id">编号: 230501</span>
             </div>
             <table class="meeting-info-table">
@@ -488,13 +444,16 @@
                 <p><strong>最终决定：</strong> 大家投票决定战队叫 <strong>“机甲梦想家” (Mech Dreamers)</strong>！听起来既有科技感又有梦想，大家都觉得很棒！</p>
                 <p><strong>战队口号：</strong> 梦想启动，创造未来</p>
             </div>
-            <div style="font-size: 12px; text-align: right; color: #888; margin-top: 10px;">记录人：印涵邸 &nbsp;&nbsp; 审核人：叶恒瑞</div>
+            <div style="font-size: 18px; text-align: right; color: #888; margin-top: 10px;">记录人：印涵邸 &nbsp;&nbsp; 审核人：叶恒瑞</div>
         </div>
-
-        <!-- Meeting 2 -->
+        <div class="page-number">13</div>
+    </div>
+    
+    <!-- ================= PAGE: Meeting 2 ================= -->
+    <div class="sheet">
+        <h1>会议记录 (2)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
-                <span class="meeting-title">2) 备赛集训: 首次参赛-梦想开始</span>
                 <span class="meeting-id">编号: 250601</span>
             </div>
             <table class="meeting-info-table">
@@ -525,18 +484,14 @@
                 </ul>
             </div>
         </div>
-
         <div class="page-number">14</div>
     </div>
 
-    <!-- ================= PAGE: Meeting 3 & 4 ================= -->
+    <!-- ================= PAGE: Meeting 3 ================= -->
     <div class="sheet">
-        <h1>会议记录 (2/5)</h1>
-
-        <!-- Meeting 3 -->
+        <h1>会议记录 (3)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
-                <span class="meeting-title">3) WRC 选拔赛赛前动员</span>
                 <span class="meeting-id">编号: 250701</span>
             </div>
             <table class="meeting-info-table">
@@ -570,11 +525,14 @@
                 </ul>
             </div>
         </div>
+        <div class="page-number">15</div>
+    </div>
 
-        <!-- Meeting 4 -->
+    <!-- ================= PAGE: Meeting 4 ================= -->
+    <div class="sheet">
+        <h1>会议记录 (4)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
-                <span class="meeting-title">4) 2025年练兵赛赛前动员</span>
                 <span class="meeting-id">编号: 250702</span>
             </div>
             <table class="meeting-info-table">
@@ -613,17 +571,14 @@
                 </ul>
             </div>
         </div>
-        <div class="page-number">15</div>
+        <div class="page-number">16</div>
     </div>
 
-    <!-- ================= PAGE: Meeting 5 & 6 ================= -->
+    <!-- ================= PAGE: Meeting 5 ================= -->
     <div class="sheet">
-        <h1>会议记录 (3/5)</h1>
-
-        <!-- Meeting 5 -->
+        <h1>会议记录 (5)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
-                <span class="meeting-title">5) 2025年北京胜炫赛赛前动员</span>
                 <span class="meeting-id">编号: 250801</span>
             </div>
             <table class="meeting-info-table">
@@ -655,11 +610,14 @@
                 </ul>
             </div>
         </div>
+        <div class="page-number">17</div>
+    </div>
 
-        <!-- Meeting 6 -->
+    <!-- ================= PAGE: Meeting 6 ================= -->
+    <div class="sheet">
+        <h1>会议记录 (6)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
-                <span class="meeting-title">6) 亚公赛石家庄站赛前动员</span>
                 <span class="meeting-id">编号: 250901</span>
             </div>
             <table class="meeting-info-table">
@@ -693,17 +651,14 @@
                 </ul>
             </div>
         </div>
-        <div class="page-number">16</div>
+        <div class="page-number">18</div>
     </div>
 
-    <!-- ================= PAGE: Meeting 7 & 8 ================= -->
+    <!-- ================= PAGE: Meeting 7 ================= -->
     <div class="sheet">
-        <h1>会议记录 (4/5)</h1>
-
-        <!-- Meeting 7 -->
+        <h1>会议记录 (7)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
-                <span class="meeting-title">7) 首届北京校际联赛赛前动员</span>
                 <span class="meeting-id">编号: 2501001</span>
             </div>
             <table class="meeting-info-table">
@@ -738,11 +693,14 @@
                 </ul>
             </div>
         </div>
+        <div class="page-number">19</div>
+    </div>
 
-        <!-- Meeting 8 -->
+    <!-- ================= PAGE: Meeting 8 ================= -->
+    <div class="sheet">
+        <h1>会议记录 (8)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
-                <span class="meeting-title">8) 西城区教委机器人智能大赛</span>
                 <span class="meeting-id">编号: 2501002</span>
             </div>
             <table class="meeting-info-table">
@@ -773,17 +731,14 @@
                 </ul>
             </div>
         </div>
-        <div class="page-number">17</div>
+        <div class="page-number">20</div>
     </div>
 
     <!-- ================= PAGE: Meeting 9 ================= -->
     <div class="sheet">
-        <h1>会议记录 (5/5)</h1>
-
-        <!-- Meeting 9 -->
+        <h1>会议记录 (9)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
-                <span class="meeting-title">9) 北京市教委机器人智能大赛</span>
                 <span class="meeting-id">编号: 2501102</span>
             </div>
             <table class="meeting-info-table">
@@ -819,7 +774,7 @@
         <div class="footer">
             <span>记录人：印涵邸</span>
         </div>
-        <div class="page-number">18</div>
+        <div class="page-number">21</div>
     </div>
     <!-- ================= REPLACED CONTENT END ================= -->
 
@@ -842,7 +797,7 @@
             <span>队长签字：叶恒瑞</span>
             <span>2025年12月6日</span>
         </div>
-        <div class="page-number">20</div>
+        <div class="page-number">22</div>
     </div>
 
     <script src="assets/scripts/toggle-buttons.js"></script>
