edited common-elements.js to insert footer dynamically

--- a/engineering_notebook/ch01.html
+++ b/engineering_notebook/ch01.html
@@ -12,23 +12,29 @@
             width: 100%;
             border-collapse: collapse;
             margin-bottom: 10px;
-            font-size: 20px; /* Unified font size */
+            font-size: 20px;
+            /* Unified font size */
         }
+
         .meeting-info-table td {
             border: 1px solid #e0e0e0;
             padding: 6px 10px;
         }
+
         .meeting-info-table .label {
             background-color: #f0f4f8;
             font-weight: bold;
             width: 15%;
             color: #555;
         }
+
         .meeting-content h4 {
             font-size: 22px;
             font-weight: bold;
         }
-        .meeting-content p, .meeting-content li {
+
+        .meeting-content p,
+        .meeting-content li {
             font-size: 20px;
         }
     </style>
@@ -374,7 +380,7 @@
         <!-- <p>我们给自己定下了一个行动指南，就像玩游戏做任务一样！</p> -->
         <iframe src="ch01_process_diagram.html" style="width: 100%; border: none;"
             onload="this.style.height=this.contentWindow.document.body.scrollHeight+'px';" scrolling="no"></iframe>
-            <p><strong>我们的目标：</strong>认真学习、稳步成长、全力以赴、功到自成</p>
+        <p><strong>我们的目标：</strong>认真学习、稳步成长、全力以赴、功到自成</p>
         <!-- <div class="diary-card" style="margin-top: 30px; border-color: #E74C3C; text-align:center;">
         </div> -->
         <div class="footer"><span>记录人：印涵邸</span></div>
@@ -394,17 +400,19 @@
             <p><strong>运用规则：</strong>搭建测试 → 解决问题 → 升级</p>
             <p><strong>执行规则：</strong>制定策略 → 训练 → 发现问题/解决问题</p>
             <p><strong>练习重点：</strong>
-                <ul>
-                    <li>高/低挂</li>
-                    <li>远端/近端/中心区/三角区/边桩</li>
-                </ul>
+            <ul>
+                <li>高/低挂</li>
+                <li>远端/近端/中心区/三角区/边桩</li>
+            </ul>
             </p>
             <p><strong>实战比赛：</strong>
-                <ul>
-                    <li>赛前：联队队友 → 了解优势 → 确定策略 → 临场应变</li>
-                    <li>赛后：复盘分析总结 → 解决问题</li>
-                </ul>
+            <ul>
+                <li>赛前：联队队友 → 了解优势 → 确定策略 → 临场应变</li>
+                <li>赛后：复盘分析总结 → 解决问题</li>
+            </ul>
             </p>
+        </div>
+        <div class="footer">
         </div>
         <div class="page-number">12</div>
     </div>
@@ -444,11 +452,14 @@
                 <p><strong>最终决定：</strong> 大家投票决定战队叫 <strong>“机甲梦想家” (Mech Dreamers)</strong>！听起来既有科技感又有梦想，大家都觉得很棒！</p>
                 <p><strong>战队口号：</strong> 梦想启动，创造未来</p>
             </div>
-            <div style="font-size: 18px; text-align: right; color: #888; margin-top: 10px;">记录人：印涵邸 &nbsp;&nbsp; 审核人：叶恒瑞</div>
+            <div style="font-size: 18px; text-align: right; color: #888; margin-top: 10px;">记录人：印涵邸 &nbsp;&nbsp; 审核人：叶恒瑞
+            </div>
+        </div>
+        <div class="footer">
         </div>
         <div class="page-number">13</div>
     </div>
-    
+
     <!-- ================= PAGE: Meeting 2 ================= -->
     <div class="sheet">
         <h1>会议记录 (2)</h1>
@@ -483,6 +494,8 @@
                     <li>6月28日 9:50 集训场地汇合，由叶恒瑞带上记号笔在器材上写好队号及名字，由叶恒嘉和宋书玥检查。</li>
                 </ul>
             </div>
+        </div>
+        <div class="footer">
         </div>
         <div class="page-number">14</div>
     </div>
@@ -524,6 +537,8 @@
                     <li>航空箱钥匙由叶恒嘉、宋书玥各保管一把。</li>
                 </ul>
             </div>
+        </div>
+        <div class="footer">
         </div>
         <div class="page-number">15</div>
     </div>
@@ -571,6 +586,8 @@
                 </ul>
             </div>
         </div>
+        <div class="footer">
+        </div>
         <div class="page-number">16</div>
     </div>
 
@@ -609,6 +626,8 @@
                     <li>将赛车全面做一次保养。</li>
                 </ul>
             </div>
+        </div>
+        <div class="footer">
         </div>
         <div class="page-number">17</div>
     </div>
@@ -650,6 +669,8 @@
                     <li>学会使用对讲机。</li>
                 </ul>
             </div>
+        </div>
+        <div class="footer">
         </div>
         <div class="page-number">18</div>
     </div>
@@ -693,6 +714,8 @@
                 </ul>
             </div>
         </div>
+        <div class="footer">
+        </div>
         <div class="page-number">19</div>
     </div>
 
@@ -730,6 +753,8 @@
                     <li>带好自动场地摆放图。</li>
                 </ul>
             </div>
+        </div>
+        <div class="footer">
         </div>
         <div class="page-number">20</div>
     </div>
