ch01: removed footers which will be added on the fly by code

--- a/engineering_notebook/ch01.html
+++ b/engineering_notebook/ch01.html
@@ -110,10 +110,6 @@
 
 
 
-        <div class="footer">
-            <span>记录人：印涵邸</span>
-            <span>见证人：王昕老师</span>
-        </div>
         <div class="page-number">2</div>
     </div>
     <div class="sheet">
@@ -132,10 +128,7 @@
             </p>
         </div>
 
-        <div class="footer">
-            <span>记录人：印涵邸</span>
-            <span>见证人：王昕老师</span>
-        </div>
+
         <div class="page-number">2</div>
     </div>
     <!-- ================= PAGE 3-6: 队员介绍 (合并展示，节省篇幅) ================= -->
@@ -149,10 +142,7 @@
         <p>很小的时候，我就痴迷乐高搭建。四年级开始，我加入到北京西城科技馆，由王昕老师指导，开始系统的学习VEX的课程。在25年的7月我开始尝试参加比赛。理论与实际相结合，让我对VEX有了更深的了解，也懂得了团队协作的重要性，学会了直面困难。未来我会继续学习、探索，在机器人竞赛中取得更好的成绩。
         </p>
 
-        <div class="footer">
-            <span>记录人：周同学</span>
-            <span>见证人：张同学</span>
-        </div>
+
         <div class="page-number">3</div>
     </div>
 
@@ -166,10 +156,7 @@
         <p>受哥哥影响，我也很喜欢乐高的搭建，从小我就是哥哥最得力的助手。经过系统的学习了VEX课程后，在赛场上我和哥哥相互配合得更加默契。今后我会和哥哥还有其他队员一起，继续探索、创新、争取在今后的机器人比赛中取得更好的成绩。
         </p>
 
-        <div class="footer">
-            <span>记录人：周同学</span>
-            <span>见证人：李同学</span>
-        </div>
+
         <div class="page-number">4</div>
     </div>
 
@@ -183,10 +170,7 @@
         <p>我就读于北京市西城区黄城根小学，是一个活泼开朗、热爱动手操作的女生。我喜欢VEX，还喜欢英语和打羽毛球。三年级开始在北京市西城区科技馆跟王昕老师学习VEX课程。在队伍中我主要担任装填手、操作手，我和我的队友一起相互配合，把每场比赛打好。
         </p>
 
-        <div class="footer">
-            <span>记录人：周同学</span>
-            <span>见证人：王同学</span>
-        </div>
+
         <div class="page-number">5</div>
     </div>
 
@@ -201,7 +185,7 @@
         <p><strong>战队角色：</strong> 装填手</p>
         <p>我叫印涵邸，今年10岁，就读于陶然亭小学五年级。我从小就特别喜欢机器人。三年纪开始在北京少年宫搭乐高。今年五月开始跟着北京西城科技馆王昕老师学VEX课程。25年
             月我在西城区“青少年未来工程师”竞赛中获得奖，这让我更加坚定了自己的兴趣。这次是我第一次参加VEX比赛，我希望能队友一起取得好成绩。</p>
-        <div class="footer"><span>见证人：全员</span></div>
+
         <div class="page-number">5-2</div>
     </div>
 
@@ -227,7 +211,7 @@
             <li><strong>备件管理：</strong> 所有的备用结构件、电子件均严格以“散件”形式存放，杜绝违规风险。</li>
         </ol>
 
-        <div class="footer"><span>记录人：印涵邸</span></div>
+
         <div class="page-number">6</div>
     </div>
 
@@ -255,7 +239,7 @@
             <li><strong>分类存储：</strong> 所有零件按“齿轮”、“轴”、“销钉”等分类装袋、装箱，并贴好标签。</li>
             <li><strong>动态维护：</strong> 训练后定时检查机器各处衔接；使用后的工具与零件必须及时归位；根据机器升级情况，及时进行维修或补充申报。</li>
         </ul>
-        <div class="footer"><span>记录人：印涵邸</span></div>
+
         <div class="page-number">7</div>
     </div>
     <div class="sheet">
@@ -270,7 +254,7 @@
             <li><strong>搬运安全：</strong> 恢复赛台摆放及搬运机器时，务必注意脚下，防止摔倒或踩踏器材。</li>
         </ol>
 
-        <div class="footer"><span>记录人：印涵邸</span></div>
+
         <div class="page-number">7</div>
     </div>
 
@@ -299,7 +283,7 @@
             <li><strong>持续精进：</strong> 遇到难题（规则、结构、编程）不轻言放弃，主动请教；正视失误，活动后必须记录问题、总结经验。</li>
         </ul>
 
-        <div class="footer"><span>记录人：印涵邸</span></div>
+
         <div class="page-number">8</div>
     </div>
 
@@ -327,7 +311,7 @@
             <p><strong>3. 考勤/纪律问题：</strong> 队员若迟到或缺席，必须说明原因，并利用课余时间补齐相应的训练量，确保进度同步。</p>
         </div>
 
-        <div class="footer"><span>见证人：全员</span></div>
+
         <div class="page-number">9</div>
     </div>
 
@@ -370,7 +354,7 @@
                 </tr>
             </tbody>
         </table>
-        <div class="footer"><span>见证人：全员</span></div>
+
         <div class="page-number">10</div>
     </div>
 
@@ -383,7 +367,7 @@
         <p><strong>我们的目标：</strong>认真学习、稳步成长、全力以赴、功到自成</p>
         <!-- <div class="diary-card" style="margin-top: 30px; border-color: #E74C3C; text-align:center;">
         </div> -->
-        <div class="footer"><span>记录人：印涵邸</span></div>
+
         <div class="page-number">11</div>
     </div>
 
@@ -412,8 +396,7 @@
             </ul>
             </p>
         </div>
-        <div class="footer">
-        </div>
+
         <div class="page-number">12</div>
     </div>
 
@@ -455,8 +438,7 @@
             <div style="font-size: 18px; text-align: right; color: #888; margin-top: 10px;">记录人：印涵邸 &nbsp;&nbsp; 审核人：叶恒瑞
             </div>
         </div>
-        <div class="footer">
-        </div>
+
         <div class="page-number">13</div>
     </div>
 
@@ -495,8 +477,7 @@
                 </ul>
             </div>
         </div>
-        <div class="footer">
-        </div>
+
         <div class="page-number">14</div>
     </div>
 
@@ -538,8 +519,7 @@
                 </ul>
             </div>
         </div>
-        <div class="footer">
-        </div>
+
         <div class="page-number">15</div>
     </div>
 
@@ -586,8 +566,7 @@
                 </ul>
             </div>
         </div>
-        <div class="footer">
-        </div>
+
         <div class="page-number">16</div>
     </div>
 
@@ -627,8 +606,7 @@
                 </ul>
             </div>
         </div>
-        <div class="footer">
-        </div>
+
         <div class="page-number">17</div>
     </div>
 
@@ -670,8 +648,7 @@
                 </ul>
             </div>
         </div>
-        <div class="footer">
-        </div>
+
         <div class="page-number">18</div>
     </div>
 
@@ -714,8 +691,7 @@
                 </ul>
             </div>
         </div>
-        <div class="footer">
-        </div>
+
         <div class="page-number">19</div>
     </div>
 
@@ -754,8 +730,7 @@
                 </ul>
             </div>
         </div>
-        <div class="footer">
-        </div>
+
         <div class="page-number">20</div>
     </div>
 
@@ -796,9 +771,6 @@
             </div>
         </div>
 
-        <div class="footer">
-            <span>记录人：印涵邸</span>
-        </div>
         <div class="page-number">21</div>
     </div>
     <!-- ================= REPLACED CONTENT END ================= -->
@@ -814,14 +786,12 @@
 
         <p>接下来的三代车一定会是最棒的！机甲梦想家，目标世锦赛！</p>
 
-        <div class="img-placeholder" style="height: 350px;">
+        <!-- <div class="img-placeholder" style="height: 350px;">
             [图片：全体队员把手叠在一起加油的照片，特写，光线温暖，背景是我们的二代车]
-        </div>
+        </div> -->
 
-        <div class="footer">
-            <span>队长签字：叶恒瑞</span>
-            <span>2025年12月6日</span>
-        </div>
+        <img src="assets/ch01/team-photo-2.webp" style="height: 400px;margin:0 auto;display: block;">
+
         <div class="page-number">22</div>
     </div>
 
