ch01: added mindmap for 1.6

--- a/engineering_notebook/ch01.html
+++ b/engineering_notebook/ch01.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>工程笔记 - 第一章：我们的故事 (2276A)</title>
+    <title>工程笔记 - 第一章：梦开始的地方 (2276A)</title>
     <link rel="stylesheet" href="assets/styles/style.css">
     <style>
         /* 补充样式，确保新插入的会议记录表格美观 */
@@ -45,7 +45,7 @@
     <!-- ================= PAGE 1: 封面 ================= -->
     <div class="sheet">
         <div style="text-align: center; margin-top: 120px;">
-            <h1 style="font-size: 56px; border: none; color: #005f9e;">我的工程笔记</h1>
+            <h1 style="font-size: 56px; border: none; color: #005f9e;">我们的工程笔记</h1>
             <h2 style="font-size: 36px; background: none; color: #555;">第一章：梦开始的地方</h2>
             <h3 style="font-size: 24px; color: #888; border: none;">Chapter 1: Introduction & Team Story</h3>
 
@@ -377,8 +377,12 @@
         <h1>1.6 会议记录</h1>
         <p style="font-size: 20px; color: #666;">记录我们成长的每一步脚印</p>
 
-        <h2>头脑风暴与思维导图</h2>
-        <div class="diary-card">
+        <h2>头脑风暴与思维导图（1）</h2>
+
+        <img src="assets/ch01/mindmap-a.webp" style="height: 700px;margin:0 auto;display: block;">
+        <!-- <img src="assets/ch01/mindmap-b.webp" style="height: 400px;margin:0 auto;display: block;"> -->
+
+        <!-- <div class="diary-card">
             <p><strong>学习目标：</strong>提高能力（设计、搭建、编程）→ 团队协作 → 解决问题</p>
             <p><strong>学习规则：</strong>赛事说明 → 赛局（车子、Pin/Beam、赛台、得分、违规）→ 操作手/特定赛</p>
             <p><strong>运用规则：</strong>搭建测试 → 解决问题 → 升级</p>
@@ -395,7 +399,37 @@
                 <li>赛后：复盘分析总结 → 解决问题</li>
             </ul>
             </p>
-        </div>
+        </div> -->
+
+        <div class="page-number">12</div>
+    </div>
+    <div class="sheet">
+        <h1>1.6 会议记录</h1>
+        <p style="font-size: 20px; color: #666;">记录我们成长的每一步脚印</p>
+
+        <h2>头脑风暴与思维导图（2）</h2>
+
+        <img src="assets/ch01/mindmap-b.webp" style="height: 700px;margin:0 auto;display: block;">
+        <!-- <img src="assets/ch01/mindmap-b.webp" style="height: 400px;margin:0 auto;display: block;"> -->
+
+        <!-- <div class="diary-card">
+            <p><strong>学习目标：</strong>提高能力（设计、搭建、编程）→ 团队协作 → 解决问题</p>
+            <p><strong>学习规则：</strong>赛事说明 → 赛局（车子、Pin/Beam、赛台、得分、违规）→ 操作手/特定赛</p>
+            <p><strong>运用规则：</strong>搭建测试 → 解决问题 → 升级</p>
+            <p><strong>执行规则：</strong>制定策略 → 训练 → 发现问题/解决问题</p>
+            <p><strong>练习重点：</strong>
+            <ul>
+                <li>高/低挂</li>
+                <li>远端/近端/中心区/三角区/边桩</li>
+            </ul>
+            </p>
+            <p><strong>实战比赛：</strong>
+            <ul>
+                <li>赛前：联队队友 → 了解优势 → 确定策略 → 临场应变</li>
+                <li>赛后：复盘分析总结 → 解决问题</li>
+            </ul>
+            </p>
+        </div> -->
 
         <div class="page-number">12</div>
     </div>
@@ -435,7 +469,6 @@
                 <p><strong>最终决定：</strong> 大家投票决定战队叫 <strong>“机甲梦想家” (Mech Dreamers)</strong>！听起来既有科技感又有梦想，大家都觉得很棒！</p>
                 <p><strong>战队口号：</strong> 梦想启动，创造未来</p>
             </div>
-            <div style="font-size: 18px; text-align: right; color: #888; margin-top: 10px;">记录人：印涵邸 &nbsp;&nbsp; 审核人：叶恒瑞
             </div>
         </div>
 
