ch01: minor fixes

--- a/engineering_notebook/ch01.html
+++ b/engineering_notebook/ch01.html
@@ -405,7 +405,7 @@
     </div>
     <div class="sheet">
         <h1>1.6 会议记录</h1>
-        <p style="font-size: 20px; color: #666;">记录我们成长的每一步脚印</p>
+        <!-- <p style="font-size: 20px; color: #666;">记录我们成长的每一步脚印</p> -->
 
         <h2>头脑风暴与思维导图（2）</h2>
 
@@ -822,8 +822,8 @@
         <!-- <div class="img-placeholder" style="height: 350px;">
             [图片：全体队员把手叠在一起加油的照片，特写，光线温暖，背景是我们的二代车]
         </div> -->
-
-        <img src="assets/ch01/team-photo-2.webp" style="height: 400px;margin:0 auto;display: block;">
+        <br>
+        <img src="assets/ch01/team-photo-2.webp" style="height: 500px;margin:0 auto;display: block;">
 
         <div class="page-number">22</div>
     </div>
