ch01: added dummy photos for each member

--- a/engineering_notebook/ch01.html
+++ b/engineering_notebook/ch01.html
@@ -136,7 +136,9 @@
         <h1>1.2 成员介绍</h1>
 
         <h2>叶恒瑞 哥哥 (元宝)</h2>
-        <div class="img-placeholder" style="margin: 10px 0;">[图片：正在编写代码的照片]</div>
+        <!-- <div class="img-placeholder" style="margin: 10px 0;">[图片：正在编写代码的照片]</div> -->
+        <img src="assets/ch01/yhr.webp" style="height: 400px;margin:0 auto;display: block;border-radius: 10px;">
+
         <p><strong>年龄：</strong> 11岁 (五年级)</p>
         <p><strong>战队角色：</strong> 操作手、搭建员</p>
         <p>很小的时候，我就痴迷乐高搭建。四年级开始，我加入到北京西城科技馆，由王昕老师指导，开始系统的学习VEX的课程。在25年的7月我开始尝试参加比赛。理论与实际相结合，让我对VEX有了更深的了解，也懂得了团队协作的重要性，学会了直面困难。未来我会继续学习、探索，在机器人竞赛中取得更好的成绩。
@@ -150,7 +152,9 @@
         <h1>1.2 成员介绍 (续)</h1>
 
         <h2>叶恒嘉 弟弟 (英俊)</h2>
-        <div class="img-placeholder" style="margin: 10px 0;">[图片：正在组装齿轮的照片]</div>
+        <!-- <div class="img-placeholder" style="margin: 10px 0;">[图片：正在组装齿轮的照片]</div> -->
+        <img src="assets/ch01/yhj.webp" style="height: 400px;margin:0 auto;display: block;border-radius: 10px;">
+
         <p><strong>年龄：</strong> 11岁 (五年级)</p>
         <p><strong>战队角色：</strong> 搭建员、操作手</p>
         <p>受哥哥影响，我也很喜欢乐高的搭建，从小我就是哥哥最得力的助手。经过系统的学习了VEX课程后，在赛场上我和哥哥相互配合得更加默契。今后我会和哥哥还有其他队员一起，继续探索、创新、争取在今后的机器人比赛中取得更好的成绩。
@@ -164,7 +168,9 @@
         <h1>1.2 成员介绍 (续)</h1>
 
         <h2>宋书玥 (小米)</h2>
-        <div class="img-placeholder" style="margin: 10px 0;">[图片：正在绘制草图的照片]</div>
+        <!-- <div class="img-placeholder" style="margin: 10px 0;">[图片：正在绘制草图的照片]</div> -->
+        <img src="assets/ch01/ssy.webp" style="height: 400px;margin:0 auto;display: block;border-radius: 10px;">
+
         <p><strong>年龄：</strong> 9岁 (四年级)</p>
         <p><strong>战队角色：</strong> 操作手、装填手</p>
         <p>我就读于北京市西城区黄城根小学，是一个活泼开朗、热爱动手操作的女生。我喜欢VEX，还喜欢英语和打羽毛球。三年级开始在北京市西城区科技馆跟王昕老师学习VEX课程。在队伍中我主要担任装填手、操作手，我和我的队友一起相互配合，把每场比赛打好。
@@ -176,15 +182,19 @@
 
     <div class="sheet">
         <h1>1.2 成员介绍 (续)</h1>
-        <p>25年的11月，我们增加了新队友，让战队更具活力。我们在装填操作、物料登记保管、训练计划制定、训练效果监督以及赛场外联的内容上都更了新的执行细节和标准。让团队分工更加明确细致，从战术衔接到赛场实战，每个环紧也更加紧凑高效。大家训练氛围越来越专注、外联更加顺畅，战队协作配合更加默契。战队提升了整体战斗力，朝着赛季目标稳稳推进。
+        <h2>印涵邸 (小印)</h2>
+        <p>2025年11月，新队员加入激发战队活力。我们全面优化了从物资管理、训练监控到赛场外联的执行标准，细化分工，实现了从战术到实战的高效衔接。目前团队配合默契，战斗力显著提升，正稳步迈向赛季目标。
         </p>
 
-        <h2>印涵邸 (小印)</h2>
-        <div class="img-placeholder" style="margin: 10px 0;">[图片：手持遥控器练习的照片]</div>
-        <p><strong>年龄：</strong> 10岁 (五年级)</p>
-        <p><strong>战队角色：</strong> 装填手</p>
-        <p>我叫印涵邸，今年10岁，就读于陶然亭小学五年级。我从小就特别喜欢机器人。三年纪开始在北京少年宫搭乐高。今年五月开始跟着北京西城科技馆王昕老师学VEX课程。25年
-            月我在西城区“青少年未来工程师”竞赛中获得奖，这让我更加坚定了自己的兴趣。这次是我第一次参加VEX比赛，我希望能队友一起取得好成绩。</p>
+        <!-- <div class="img-placeholder" style="margin: 10px 0;">[图片：手持遥控器练习的照片]</div> -->
+        <img src="assets/ch01/yhd.webp" style="height: 400px;margin:0 auto;display: block;border-radius: 10px;">
+
+        <p style="display: flex; justify-content: space-between;">
+            <span><strong>年龄：</strong> 10岁 (五年级)</span>
+            <span><strong>战队角色：</strong> 装填手</span>
+        </p>
+        <p>我就读于陶然亭小学五年级。我从小就特别喜欢机器人。三年级开始在北京少年宫搭乐高。今年五月起跟着北京西城科技馆王昕老师学VEX课程。25年5月我在西城区“青少年未来工程师”竞赛中获奖，这让我更加坚定了自己的兴趣。这次是我第一次参加VEX比赛，我希望能和队友一起取得好成绩。
+        </p>
 
         <div class="page-number">5-2</div>
     </div>
